--- a/css/contact.css
+++ b/css/contact.css
@@ -311,7 +311,7 @@ body{
  
 }
 .story{
-  height: 500px;
+  height: 1200px;
   padding:50px;
   padding-top: 70px;
   font-size: 20px;
@@ -321,4 +321,53 @@ body{
 padding-left: 60px;
 font-size: 20px;
 color: #13255E;
+}
+.header{
+  background-color: gray;
+  color: honeydew;
+  text-align: center;
+  font-size: 30px;
+}
+#menu {
+  width: 100%;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
+
+.menu-item {
+  width: 16%;
+  display: inline-block;
+  margin: 0px;
+  text-align: center;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  ;
+}
+.menu-item:hover{
+  background-color: lightslategray;
+}
+input:required:valid{
+  border-color: green !important;;    
+}
+input:required:invalid{
+  border-color: red !important;
+}
+.form-name{
+  background-color: gray;
+  color: white;
+  text-align: center;
+  font-size: 25px;
+}
+.form-creat{
+  margin-left: 120px;
+  margin-top: 100px;
+}
+.img-create{
+  height: 500px;
+  width: 500px;
+  margin-top: 100px;
+  text-align: left;
+  
+  
+
 }
